[package]
name = "grid_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Graphics and windowing - using version 0.3 for better compatibility
macroquad = "0.3"

# Add rayon for parallel processing when scaling up
# rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
